--- a/project1.css
+++ b/project1.css
@@ -1,17 +1,10 @@
 body {
-    background-image: url(download.jpeg);
+    background-image: url(img.jpg);
 }
 h1{
     text-align: center;
     font-size: 40px;
-    background: linear-gradient(to right,
-    violet,
-    indigo,
-    blue,
-    green,
-    yellow,
-    orange,
-    red);
+    background-color: #213363;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -19,12 +12,7 @@ h1{
 h2{
     text-align: center;
     font-size: 40px;
-    background: linear-gradient(to right,
-    violet,
-    rgb(14, 133, 224),
-    green,
-    yellow,
-    red);
+    background:  violet;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -33,22 +21,15 @@ h2{
 legend {
     text-align: center;
     font-size: 40px;
-    background: linear-gradient(to right,
-    violet,
-    indigo,
-    blue,
-    green,
-    yellow,
-    orange,
-    red);
+    background:  green;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
 }
 
 ul{
-    color: #213363;
-    background-color: #FAF0E4;
+    color: lightgoldenrodyellow;
+    background-color: goldenrod;
 }
 
 img{
@@ -65,31 +46,31 @@ img{
 
 header{ 
     grid-area: 1/1/2/4;
-    background-color: #B2A4FF;
+    background-color: seagreen;
 }
  
 aside{
     grid-area: 2/2/3/4;
-    background-color:#FDF7C3;
+    background-color:gold;
 }
 
 main{
     grid-area: 2/1/3/2;
-    background-color: #A0C49D;
+    background-color:pink;
 }
 
 footer{
     grid-area: 3/1/5/4;
-    background-color: #E5D1FA;
+    background-color:#B2A4FF;
 }
 table,th,td {
-    color: #213363;
+    color: black;
     width:500px;
     margin:auto;
     font-size: large;
     padding: 10px;
     text-align: center;
     border: 2px solid ;
-    border-color: blue;
-    background-color: #E5D1FA;
+    border-color: brown;
+    background-color: wheat;
 }
